--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -33,7 +33,7 @@
             android:layout_height="40dp"
             android:layout_below="@+id/user_name_display"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="10dp"
             android:background="@color/colorBasic"
             android:ems="10"
             android:hint="@string/phone_number"
@@ -48,7 +48,7 @@
             android:layout_height="40dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/edit_phone_number"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="10dp"
             android:background="@color/colorBasic"
             android:ems="10"
             android:hint="@string/password"
@@ -58,19 +58,34 @@
             android:textColorHint="@color/black" />
 
         <EditText
+            android:id="@+id/confirm_edit_password"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/edit_password"
+            android:layout_centerHorizontal="true"
+            android:ems="10"
+            android:background="@color/colorBasic"
+            android:layout_marginTop="10dp"
+            android:inputType="textPassword"
+            android:hint="@string/confirmPassword"
+            android:paddingHorizontal="10dp"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"/>
+
+        <EditText
             android:id="@+id/edit_name"
             android:layout_width="260dp"
             android:layout_height="40dp"
+            android:layout_below="@+id/confirm_edit_password"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/edit_password"
-            android:layout_marginTop="25dp"
-            android:background="@color/colorBasic"
             android:ems="10"
-            android:hint="@string/name"
+            android:background="@color/colorBasic"
+            android:layout_marginTop="10dp"
             android:inputType="textPersonName"
+            android:hint="@string/name"
             android:paddingHorizontal="10dp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black" />
+            android:textColorHint="@color/black"
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/edit_question"
@@ -78,7 +93,7 @@
             android:layout_height="40dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/edit_name"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="10dp"
             android:background="@color/colorBasic"
             android:ems="10"
             android:hint="@string/security_question"
@@ -93,7 +108,7 @@
             android:layout_height="40dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/edit_question"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="10dp"
             android:background="@color/colorBasic"
             android:ems="10"
             android:hint="@string/answer"
@@ -108,7 +123,7 @@
             android:layout_height="40dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/edit_answer"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="10dp"
             android:background="@color/colorBasic"
             android:ems="10"
             android:hint="@string/birthdate_mm_dd_yyyy"
@@ -123,7 +138,7 @@
             android:layout_height="40dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/edit_birthday"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="10dp"
             android:background="@color/colorBasic"
             android:ems="10"
             android:hint="@string/email"
@@ -139,7 +154,7 @@
             android:layout_below="@+id/edit_email"
             android:layout_centerHorizontal="true"
             android:background="@color/black"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
             android:text="@string/edit"
             android:textColor="@color/white" />
